--- a/sass/abstracts/_breakpoints.scss
+++ b/sass/abstracts/_breakpoints.scss
@@ -1,4 +1,4 @@
 $bp-phone: 20rem;
-$bp-tablet: 39rem;
+$bp-tablet: 41rem;
 $bp-monitor: 63rem;
 $bp-desktop: 108rem;
